Ixion: Make sure left and right aligned images with captions have some horizontal spacing. Fixes #263.

--- a/ixion/style.css
+++ b/ixion/style.css
@@ -1556,7 +1556,6 @@ object {
 	max-width: 100%;
 }
 .wp-caption {
-	margin: 0;
 	margin-bottom: 1.6em;
 	max-width: 100%;
 }
